--- a/index.html
+++ b/index.html
@@ -6,17 +6,35 @@
    <title>GOTO's PORTFOLIO</title>
    <!-- CSSファイルの読み込み -->
    <link rel="stylesheet" type="text/css" href="style.css">
+   <!-- ライブラリ読み込み -->
+   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+   <!-- jsファイル読み込み -->
+   <script src=”index.js"></script>
 </head>
 <body>
    <header>
-      <h1>GOTO's PORTFOLIO</h1>
-      <nav>
-         <ul>
-            <li><a href="#home">ホーム</a></li>
-            <li><a href="#list">記事一覧</a></li>
-            <li><a href="#qa">お問い合わせ</a></li>
-         </ul>
-      </nav>
+        <h1>GOTO's PORTFOLIO</h1>
+        <nav class="gnavi__pc-style">
+            <ul>
+                <li><a href="#home">ホーム</a></li>
+                <li><a href="#list">記事一覧</a></li>
+                <li><a href="#qa">お問い合わせ</a></li>
+            </ul>
+        </nav>
+        <!--768px以下で表示-->
+        <div class="menu-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <nav class="gnavi__sp-style">
+            <ul>
+                <li><a href="#home">ホーム</a></li>
+                <li><a href="#list">記事一覧</a></li>
+                <li><a href="#qa">お問い合わせ</a></li>
+            </ul>
+        </nav>
+        <!--/768px以下で表示-->
    </header>
    <main>
       <section>
